--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -882,7 +882,7 @@ syncprofile.backupsource.name=Backup (Quelle)
 syncprofile.backuptarget.name=Backup (Ziel)
 syncprofile.custom.name=Eigene...
 syncprofile.manualdownload.name=Manueller Download
-syncprofile.projectwork.name=Projektarbeit (Manuell Syncen)
+syncprofile.projectwork.name=Projektarbeit (Manueller Sync)
 syncprofile.syncpcs.name=Spiegeln
 
 systemservice.options.info1=Mit diese Option installieren/deinstallieren 
