--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -139,22 +139,22 @@ dialog.connect.connecting_to=\u8fde\u63a5\u5230 {0} \u2026\u2026
 dialog.connection_problem=\u8fde\u63a5\u95ee\u9898
 dialog.customsync.autodownloadfromfriends=\u4ece\u597d\u53cb\u5904\u81ea\u52a8\u4e0b\u8f7d
 dialog.customsync.autodownloadfromother=\u4ece\u5176\u4ed6\u4eba\u81ea\u52a8\u4e0b\u8f7d
-##dialog.customsync.changedetection_disabled=Change detection disabled
-dialog.customsync.minutesbetweenscans=\u68c0\u6d4b\u53d8\u5316\u7684\uff08\u6700\u5927\uff09\u5206\u949f\u6570
+dialog.customsync.changedetection_disabled=\u7981\u7528\u6587\u4ef6\u66f4\u6539\u68c0\u6d4b
+dialog.customsync.minutesbetweenscans=\u68c0\u6d4b\u6587\u4ef6\u66f4\u6539\u7684\uff08\u6700\u5927\uff09\u5206\u949f\u6570
 dialog.customsync.syncdeletionwithfriends=\u540c\u6b65\u597d\u53cb\u7684\u5220\u9664\u64cd\u4f5c
 dialog.customsync.syncdeletionwithothers=\u540c\u6b65\u5176\u5b83\u4eba\u7684\u5220\u9664\u64cd\u4f5c
 dialog.customsync.syncprofilescombo=\u4f7f\u7528\u9ed8\u8ba4\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
 dialog.customsync.text=\u9009\u62e9\u9ed8\u8ba4\u548c/\u6216\u81ea\u5b9a\u4e49\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
 dialog.customsync.title=\u9009\u62e9\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
-##dialog.directorychooser.new.description=New directory
-##dialog.directorychooser.new.exists={0}\nalready exists
-##dialog.directorychooser.new.key=N
-##dialog.directorychooser.new.name=New
-##dialog.directorychooser.new.problem=There was a problem creating\n{0}
-##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
-##dialog.directorychooser.title=Select directory
+dialog.directorychooser.new.description=\u65b0\u5efa\u6587\u4ef6\u5939
+dialog.directorychooser.new.exists={0}\n\u5df2\u7ecf\u5b58\u5728
+dialog.directorychooser.new.key=N
+dialog.directorychooser.new.name=\u65b0\u5efa
+dialog.directorychooser.new.problem=\u521b\u5efa\u4ee5\u4e0b\u6587\u4ef6\u65f6\u53d1\u751f\u9519\u8bef\n{0}
+dialog.directorychooser.text=\u9009\u62e9\u4ee5\u4e0b\u5217\u8868\u4e2d\u7684\u6587\u4ef6\u5939\uff0c\u5e76\u70b9\u51fb\u201c\u786e\u5b9a\u201d\u3002\n\u70b9\u51fb\u951a\u70b9\u53ef\u4ee5\u5c55\u5f00\u6587\u4ef6\u5939\u3002
+dialog.directorychooser.title=\u9009\u62e9\u6587\u4ef6\u5939
 dialog.fatalerror.title=\u53d1\u751f\u4e25\u91cd\u9519\u8bef
-##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
+dialog.newdirectorycreator.text=\u8f93\u5165\u4ee5\u4e0b\u6587\u4ef6\u5939\u7684\u65b0\u5efa\u5b50\u6587\u4ef6\u5939\u7684\u540d\u79f0\n{0}
 dialog.synchronization.choose=\u8bf7\u9009\u62e9\u540c\u6b65\u65f6\u7684\u884c\u4e3a
 dialog.synchronization.receive_changes=\u63a5\u6536\u6539\u53d8
 dialog.synchronization.send_and_receive_changes=\u53d1\u9001\u5e76\u63a5\u6536\u6539\u53d8
@@ -402,7 +402,7 @@ general.cancel=\u53d6\u6d88
 general.cancel.key=C
 general.days={0} \u5929
 general.description=\u63cf\u8ff0
-##general.directory=Directory
+general.directory=\u6587\u4ef6\u5939
 general.disconnected=\u65ad\u5f00\u8fde\u63a5
 general.downloads=\u4e0b\u8f7d
 general.estimatedsize=\u4f30\u8ba1\u5927\u5c0f
@@ -443,7 +443,7 @@ general.uploads=\u4e0a\u4f20
 general.user=\u7528\u6237
 general.visibility=\u516c\u5f00\u7a0b\u5ea6
 general.webservice=\u5728\u7ebf\u5b58\u50a8
-##general.whatisthis=What is this?
+general.whatisthis=\u8fd9\u662f\u4ec0\u4e48\uff1f
 general.yesterday=\u6628\u5929
 
 hideoffline.description=\u5728\u641c\u7d22\u7ed3\u679c\u4e2d\u8fc7\u6ee4\u5230\u79bb\u7ebf\u7528\u6237
@@ -650,7 +650,7 @@ preferences.dialog.language=\u8bed\u8a00
 preferences.dialog.lanlinesettings=\u5c40\u57df\u7f51\u4f20\u8f93\u901f\u7387
 preferences.dialog.linesettings=\u4e92\u8054\u7f51\u4f20\u8f93\u901f\u7387
 preferences.dialog.network.title=\u7f51\u7edc
-preferences.dialog.networkmode.lanonly=\u4ec5\u5c40\u57df\u7f51
+preferences.dialog.networkmode.lanonly=\u4ec5\u7528\u5c40\u57df\u7f51
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>\u53ea\u8fde\u63a5\u5c40\u57df\u7f51\u7684PowerFolder\u5ba2\u6237\u7aef\u3002<BR>\u53ea\u4f1a\u5728\u68c0\u67e5\u66f4\u65b0\u65f6\u8fde\u63a5\u4e92\u8054\u7f51\u3002<BR>\u4f60\u7684\u9632\u706b\u5899\u53ef\u80fd\u4f1a\u68c0\u6d4b\u5230224.0.0.1\u6216ALL-SYSTEMS.MCAST.NET\u7684\u8fde\u63a5\u3002<BR>\u6211\u4eec\u7528\u5b83\u6765\u68c0\u6d4b\u5c40\u57df\u7f51\u4e2d\u7684\u5176\u5b83PowerFolder\u5ba2\u6237\u7aef\u3002</BODY></HTML>
 preferences.dialog.networkmode.name=\u8fde\u63a5\u65b9\u5f0f
 preferences.dialog.networkmode.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
@@ -676,10 +676,10 @@ preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u60a8\u53ef\u4ee5\u5728
 preferences.dialog.silentthrottle=\u4f11\u7720\u6a21\u5f0f\u9650\u5236\u6d41\u91cf
 preferences.dialog.silentthrottle.tooltip=\u8bbe\u7f6e\u4f11\u7720\u6a21\u5f0f\u4e0b\u9650\u5236\u6d41\u91cf\u7684\u767e\u5206\u6bd4 (\u53ea\u5728\u6d41\u91cf\u9650\u5236\u4e0d\u7b49\u4e8e0\u65f6\u6709\u6548)
 preferences.dialog.smalltoolbar=\u4f7f\u7528\u5de5\u5177\u680f\u5c0f\u56fe\u6807
-##preferences.dialog.startPanel=Start panel
-##preferences.dialog.startPanel.downloads=Downloads
-##preferences.dialog.startPanel.myFolders=My Folders
-##preferences.dialog.startPanel.overview=Overview
+preferences.dialog.startPanel=\u5f00\u59cb\u9762\u677f
+preferences.dialog.startPanel.downloads=\u4e0b\u8f7d\u6587\u4ef6
+preferences.dialog.startPanel.myFolders=\u6211\u7684\u6587\u4ef6\u5939
+preferences.dialog.startPanel.overview=\u6982\u89c8
 preferences.dialog.startwithwindows=\u968fWindows\u542f\u52a8PowerFolder
 preferences.dialog.statusCantResolve=\u52a8\u6001Dns {0}\uff1a\u4e0d\u80fd\u89e3\u6790\uff01
 preferences.dialog.statusDynDnsSuccess=\u52a8\u6001Dns {0} \u9a8c\u8bc1\u6210\u529f\uff01
@@ -738,7 +738,7 @@ publicfolders.size=\u5927\u5c0f
 quickinfo.download.active={0} \u4e2a\u6d3b\u8dc3\u4e0b\u8f7d
 quickinfo.download.completed=\u6700\u8fd1\u5b8c\u6210 {0} \u4e2a\u4e0b\u8f7d
 quickinfo.download.title=\u4e0b\u8f7d\u72b6\u6001
-##quickinfo.folder.disconnected=No other computer connected
+quickinfo.folder.disconnected=\u6ca1\u6709\u5176\u4ed6\u7684\u7535\u8111\u8fde\u63a5
 quickinfo.folder.downloads_recently_completed=, \u6700\u8fd1\u5b8c\u6210\u4e86{0} \u4e2a\u4e0b\u8f7d\u4efb\u52a1
 quickinfo.folder.is_in_sync=\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65
 quickinfo.folder.is_synchronizing=\u6b63\u5728\u540c\u6b65\u6587\u4ef6\u5939\u2026\u2026
@@ -767,7 +767,7 @@ quickinfo.user.isdiconnected=\u672a\u8fde\u63a5
 quickinfo.user.secureconnected=\u5b89\u5168\u8fde\u63a5
 quickinfo.webservice.connected=\u8fde\u63a5\u5230PowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.foldersmirrored={1}\u4e2a \u6587\u4ef6\u5939\u7684{0}\u4e2a\u88ab\u5907\u4efd
-##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
+quickinfo.webservice.notavailable=\u5728\u7ebf\u5b58\u50a8\u5728\u201c\u4ec5\u7528\u5c40\u57df\u7f51\u201d\u7684\u6a21\u5f0f\u4e0b\u65e0\u6548
 quickinfo.webservice.notconnected=\u65ad\u5f00PowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.notsetup=\u8fd8\u6ca1\u6709\u914d\u7f6ePowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.title=\u5728\u7ebf\u5b58\u50a8 - \u7f51\u7edc\u670d\u52a1
@@ -947,7 +947,7 @@ unignorefile.name=\u5220\u9664\u5ffd\u7565
 winutils.shortcut.description=\u6b64\u5feb\u6377\u65b9\u5f0f\u7531PowerFolder\u653e\u7f6e\u4e8e\u6b64
 
 wizard.basicsetup.enternick=\u8bf7\u8f93\u5165\u4f60\u7684\u6635\u79f0
-wizard.basicsetup.lanonly=\u4ec5\u5c40\u57df\u7f51
+wizard.basicsetup.lanonly=\u4ec5\u7528\u5c40\u57df\u7f51
 wizard.basicsetup.networking=\u8fde\u63a5\u65b9\u5f0f
 wizard.basicsetup.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
 wizard.basicsetup.title=\u57fa\u672c\u8bbe\u7f6e
@@ -986,7 +986,7 @@ wizard.projectsync.successjoin=\u4f60\u5df2\u7ecf\u6210\u529f\u52a0\u5165\u9879\
 wizard.projectsync.takepartsync=\u52a0\u5165\u540c\u6b65
 wizard.projectsync.title=\u540c\u6b65\u9879\u76ee
 wizard.sendinvitations.additionaltext=\u9644\u52a0\u4fe1\u606f
-##wizard.sendinvitations.invitationtext=Enter a message for the receiver
+wizard.sendinvitations.invitationtext=\u8f93\u5165\u4e00\u6761\u6d88\u606f\u7ed9\u63a5\u53d7\u8005
 ##wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.joinsync=\u52a0\u5165\u955c\u50cf\u65f6\u8981\u6c42\u4f7f\u7528\u9080\u8bf7\u3002
 wizard.sendinvitations.neveruntrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
