updated by Javier

--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2,9 +2,9 @@
 # PowerFolder translation file
 #
 # Guide:
-# Missing translations are marked with ## in front of the line
+# Missing translations are marked with  in front of the line
 # You just need to translate the english text behind the =
-# Then remove the ## in front of the line.
+# Then remove the  in front of the line.
 #
 # Pro version translations start with the prefix 'pro.'
 #
@@ -139,22 +139,23 @@ dialog.connect.connecting_to=Conectando a {0}...
 dialog.connection_problem=Problema de conexi\u00f3n
 dialog.customsync.autodownloadfromfriends=Autodescarga proveniente amigos
 dialog.customsync.autodownloadfromother=Autodescarga proveniente de otros
-##dialog.customsync.changedetection_disabled=Change detection disabled
+dialog.customsync.changedetection_disabled=Detecci\u00f3n de cambios desactivada
 dialog.customsync.minutesbetweenscans=(Maximo) minutos entre cambio de detecci\u00f3n
 dialog.customsync.syncdeletionwithfriends=Syncronizar borrado con amigos
 dialog.customsync.syncdeletionwithothers=Syncronizar borrado con otros
 dialog.customsync.syncprofilescombo=Perfil de sincronia por omisi\u00f3n (default)
 dialog.customsync.text=Seleccione "default" y/o personalize el perfil de sincron\u00edga
 dialog.customsync.title=Escojer perfil de sincronia
-##dialog.directorychooser.new.description=New directory
-##dialog.directorychooser.new.exists={0}\nalready exists
-##dialog.directorychooser.new.key=N
-##dialog.directorychooser.new.name=New
-##dialog.directorychooser.new.problem=There was a problem creating\n{0}
-##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
-##dialog.directorychooser.title=Select directory
+dialog.directorychooser.new.description=Directorio nuevo
+dialog.directorychooser.new.exists={0}\nya existe
+dialog.directorychooser.new.key=N
+dialog.directorychooser.new.name=Nuevo
+dialog.directorychooser.new.problem=Hubo problemas en la creaci\u00f3n de\n{0}
+dialog.directorychooser.text=Seleccione un directorio de la lista adjunta, haga click al \u00f3K'.\nUd puede expander las carpetas seleccionando las anclas
+dialog.directorychooser.title=Seleccione un directorio
 dialog.fatalerror.title=Error Fatal
-##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
+dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
+dialog.newdirectorycreator.text=Teclear el nombre del subdirecotrio nuevo de {0}\n{0}
 dialog.synchronization.choose=Por favor, elija su acci\u00f3n en
 dialog.synchronization.receive_changes=Recibir Cambios
 dialog.synchronization.send_and_receive_changes=Enviar y recibir cambios
@@ -402,7 +403,7 @@ general.cancel=Cancelar
 general.cancel.key=C
 general.days={0} d\u00edas
 general.description=Descripci\u00f3n
-##general.directory=Directory
+general.directory=Director
 general.disconnected=Desconectado
 general.downloads=Descargas
 general.estimatedsize=Tama\u00f1o estimado
@@ -443,7 +444,7 @@ general.uploads=Env\u00edos
 general.user=Usuario
 general.visibility=Visibilidad
 general.webservice=Almacenamiento en linea
-##general.whatisthis=What is this?
+general.whatisthis=Que es esto?
 general.yesterday=ayer
 
 hideoffline.description=Los usuarios offline ser\u00e1n filtrados de esta b\u00fasqueda
@@ -676,10 +677,10 @@ preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Podr\u00e1s hallar una m
 preferences.dialog.silentthrottle=Acelerador de banda de transferencia en modo silencioso
 preferences.dialog.silentthrottle.tooltip=Establece el acelerador de banda de transferencia en modo silencioso. (solo es efectivo en limites que no son 0)
 preferences.dialog.smalltoolbar=Usar \u00edconos peque\u00f1os en la barra de herramientas
-##preferences.dialog.startPanel=Start panel
-##preferences.dialog.startPanel.downloads=Downloads
-##preferences.dialog.startPanel.myFolders=My Folders
-##preferences.dialog.startPanel.overview=Overview
+preferences.dialog.startPanel=Panel Inicial
+preferences.dialog.startPanel.downloads=Descargas
+preferences.dialog.startPanel.myFolders=Mis Carpetas
+preferences.dialog.startPanel.overview=Semblanza
 preferences.dialog.startwithwindows=Arrancar PowerFolder con Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: \u00a1No se pudo averiguar\!
 preferences.dialog.statusDynDnsSuccess=\u00a1Se valid\u00f3 con \u00e9xito la DynDns {0} \!
@@ -738,7 +739,7 @@ publicfolders.size=Tama\u00f1o
 quickinfo.download.active={0} descarga(s) activa(s)
 quickinfo.download.completed={0} descarga(s) recientemente completada(s)
 quickinfo.download.title=Estado de las Descargas
-##quickinfo.folder.disconnected=No other computer connected
+quickinfo.folder.disconnected=No hay computadoras conectadas
 quickinfo.folder.downloads_recently_completed={0} Descargas completadas recientemente
 quickinfo.folder.is_in_sync=La Carpeta esta en sincron\u00eda
 quickinfo.folder.is_synchronizing=La Carpeta se esta sincronizando...
@@ -767,7 +768,7 @@ quickinfo.user.isdiconnected=Esta desconectado
 quickinfo.user.secureconnected=conectado de forma segura
 quickinfo.webservice.connected=Conectado al almac\u00e9n en linea de PowerFolder
 quickinfo.webservice.foldersmirrored={0} of {1} Carpeta(s) est'n siendo respaldadas
-##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
+quickinfo.webservice.notavailable=Almac\u00e9n en linea no accesible en modalidad LAN solamente
 quickinfo.webservice.notconnected=Desconectado del almac\u00e9n en linea de PowerFolder
 quickinfo.webservice.notsetup=Online Storage not configured yet
 quickinfo.webservice.title=Almac\u00e9n en linea de PowerFolder
@@ -827,7 +828,7 @@ searchfriends.description=Buscar un amigo
 searchfriends.key=S
 searchfriends.name=Buscar
 
-sendinvitation.ask_emailaddres.message=Enviar direcci'n de correo electr\u00f3nico para mandar una invitaci\u00f3n
+sendinvitation.ask_emailaddres.message=Enviar direcci\u00f3n de correo electr\u00f3nico para mandar una invitaci\u00f3n
 sendinvitation.ask_emailaddres.title=Direcci\u00f3n de Email
 sendinvitation.body=Saludos {0},<br><br>{1} te invita a PowerFolder '{2}'<br>Esta invitaci\u00f3n te permitir\u00e1 accessar una carpeta privada servida por  {1}.<br><br>1) Para ser accessada necesitas primero descarga e instalar el <br>software gratuito, PowerFolder. Lo encontraras en\:<br>http\://www.powerfolder.com.<br><br>2) Despues de haberlo instalado hazle un click-doble a la invitaci\u00f3n<br>El archivo atado a este correo<br><br>Para mas informaci\u00f3n o asistancia en la instalaci\u00f3n o uso de  PowerFolder favor de<br>visitar nuestra documentaci\u00f3n en  http\://docs.powerfolder.com<br><br>Thank You,<br>El Equipo de desarrollo de PowerFolder<br>PowerFolder, Programa para Compartir Carpetas Profesional<br>.m
 sendinvitation.description=Invita un usuario a una carpeta
@@ -986,8 +987,8 @@ wizard.projectsync.successjoin=\u00a1Se ha unido con \u00e9xito al proyecto\!
 wizard.projectsync.takepartsync=Tome parte en una sincronizaci\u00f3n
 wizard.projectsync.title=Proyecto sincronizado
 wizard.sendinvitations.additionaltext=Informaci\u00f3n adicional
-##wizard.sendinvitations.invitationtext=Enter a message for the receiver
-##wizard.sendinvitations.invitationtextsample=
+wizard.sendinvitations.invitationtext=Enter a message for the receiver
+wizard.sendinvitations.invitationtextsample=Texto ejemplo de invitaci\u00f3n
 wizard.sendinvitations.joinsync=Archivos de invitaci\u00f3n se reqieren para inscribirse a una carpeta espejo.
 wizard.sendinvitations.neveruntrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
 wizard.sendinvitations.offline=No conectado
