--- a/src/etc/ReleaseNotes.txt
+++ b/src/etc/ReleaseNotes.txt
@@ -1,17 +1,25 @@
-PowerFolder Version 2.1.0 - http://www.powerfolder.com
+PowerFolder Version 2.1.1 - http://www.powerfolder.com
 
 Minimum Java version is 5.0.
 Tested on Windows Vista, Windows XP, Windows 2000, Linux (Fedora 4) and MacOS X
 
-New features:
-- Online Storage. Backup and access your data in our secure data center!
-- Customizable synchronization profiles
-- New Synchronization activity icons
+New features and improvements:
+    * New translation: Polish
+    * New translation: Arabic
+    * Less CPU usage
+    * Less memory usage
+    * Less bandwidth usage 
 
-Important Bugfixes:
-- Sync percentage now correct
-- Reconnection correctly working after lost connection
-- Friendlist now gets correctly loaded
+Bugfixes:
+    * Uploads not longer get stuck
+    * Local change detection should not longer crash
+    * Online Storage now correctly working with Internet Explorer 7.0
+    * Removed memory leak
+    * Preferences now get correctly remembered
+    * Various other minor bugfixes
+
+The full change log:
+http://dev.powerfolder.com/projects/powerfolder/query?status=closed&milestone=PowerFolder+2.1.1
 
 
 Please give us feedback and request improvements at our forum:
@@ -44,6 +52,23 @@ External libaries used:
 
 
 History:
+
+Version 2.1.0
+-------------
+
+New features:
+- Online Storage. Backup and access your data in our secure data center!
+- Customizable synchronization profiles
+- New Synchronization activity icons
+
+Important Bugfixes:
+- Sync percentage now correct
+- Reconnection correctly working after lost connection
+- Friendlist now gets correctly loaded
+
+The full change log:
+http://dev.powerfolder.com/projects/powerfolder/query?status=closed&milestone=PowerFolder+2.1
+
 
 Version 2.0.2
 -------------
