#27 - better sync logo.

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -589,6 +589,8 @@ openwebservice.description=\u00d6ffnet den Online Speicher im Webbrowser
 openwebservice.key=B
 openwebservice.name=Browser \u00f6ffnen
 
+percent.place.holder={0} %
+
 plugin_disable.description=Plugin ausschalten
 plugin_disable.key=A
 plugin_disable.name=Ausschalten
